--- a/UserCintrolsDemo/MainWindow.axaml
+++ b/UserCintrolsDemo/MainWindow.axaml
@@ -2,8 +2,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:u="clr-namespace:UserCintrolsDemo"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="UserCintrolsDemo.MainWindow"
         Title="UserCintrolsDemo">
-    Welcome to Avalonia!
+    <StackPanel>
+        <StackPanel x:Name="Main"/>
+        <Button Content="Save"
+                Click="Button_OnClick"/>
+        <TextBlock x:Name="Output"/>
+    </StackPanel>
+    
 </Window>
